--- a/index.html
+++ b/index.html
@@ -4,10 +4,52 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My-Portfolio-Website-First</title> 
-</head>
-<body>
 
-    <h1>Hello World</h1>
+
+    <!-- Google font link -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <!-- Google font link -->
+
+
+
+    <!-- Css link -->
+     <link rel="stylesheet" href="style/style.css">
+     <!-- Css link -->
+</head>
+<body class="open-sans-normal">
+
+    <!------------------------------------------- Header area start------------------------------------ -->
+    <header>
+        <nav>
+            <h3>Mary</h3>
+            <ul>
+                <li><a href="">Portfolio</a></li>
+                <li><a href="">Blog</a></li>
+                <li><a href=""><button>Hire Me</button></a></li>
+            </ul>
+            <img src="" alt="">
+        </nav>
+
+    </header>
+    <!-------------------------------------------- Header area end------------------------------------- -->
+
+
+
+    <!---------------------------------------------- main area start------------------------------------ -->
+    <main>
+
+    </main>
+    <!---------------------------------------------- main area end-------------------------------------- -->
+
+
+
+    <!---------------------------------------- Footer area start ---------------------------------------->
+    <footer>
+
+    </footer>
+    <!---------------------------------------- Footer area end ------------------------------------------>
     
 </body>
 </html>
