header area half commit

--- a/index.html
+++ b/index.html
@@ -21,16 +21,29 @@
 <body class="open-sans-normal">
 
     <!------------------------------------------- Header area start------------------------------------ -->
-    <header>
+    <header class="header">
         <nav>
-            <h3>Mary</h3>
+            <h3 class="nav-tittle">Ma<span class="text-primary">r</span>y</h3>
             <ul>
                 <li><a href="">Portfolio</a></li>
                 <li><a href="">Blog</a></li>
-                <li><a href=""><button>Hire Me</button></a></li>
+                <li><a href=""><button class="btn-primary">Hire Me</button></a></li>
             </ul>
-            <img src="" alt="">
         </nav>
+
+        <div class="banner">
+            <div class="banner-content">
+                <h4 class="banner-greating">Hi, I  am</h4>
+                <h1 class="banner-tittle">Mary Hardy</h1>
+
+                <p class="banner-discription">Shot what able cold new see hold.Friendly as an betrayed formerly he. <br> Morning because as to society behaved moments.</p>
+                <button class="btn-primary">Download CV</button>
+                <button class="btn-primary">Contact</button>
+
+            </div>
+
+            <img class="banner-profile-pic" src="./images/hardy.png" alt="">
+        </div>
 
     </header>
     <!-------------------------------------------- Header area end------------------------------------- -->
