--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body class="open-sans-normal">
 
     <!------------------------------------------- Header area start------------------------------------ -->
-    <header class="header">
+    <header class="header background-bg">
         <nav>
             <h3 class="nav-tittle">Ma<span class="text-primary">r</span>y</h3>
             <ul>
@@ -36,7 +36,7 @@
                 <h4 class="banner-greating">Hi, I  am</h4>
                 <h1 class="banner-tittle">Mary Hardy</h1>
 
-                <p class="banner-discription">Shot what able cold new see hold.Friendly as an betrayed formerly he. <br> Morning because as to society behaved moments.</p>
+                <p class="banner-discription">Shot what able cold new see hold.Friendly as an betrayed formerly he.Morning because as to society behaved moments.</p>
                 <button class="btn-primary">Download CV</button>
                 <button class="btn-primary">Contact</button>
 
@@ -52,6 +52,42 @@
 
     <!---------------------------------------------- main area start------------------------------------ -->
     <main>
+
+        <section class="about background-bg">
+           <div class="about-bg">
+            <h3 class="section-tittle">About Me</h3>
+            <p class="section-description">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+
+            <div class="about-items">
+
+                <div class="about-item">
+                    <p class="item-tittle">Name:
+                    </p>
+                    <p class="item-description">Mary Hardy </p>
+                </div>
+
+                <div class="about-item">
+                    <p class="item-tittle">Email:
+                    </p>
+                    <p class="item-description">info@gmail.com</p>
+                </div>
+
+                <div class="about-item">
+                    <p class="item-tittle">Date of birth:
+                    </p>
+                    <p class="item-description">11 November 1987</p>
+                </div>
+
+                <div class="about-item">
+                    <p class="item-tittle">From:
+                    </p>
+                    <p class="item-description">Los Angeles, USA</p>
+                </div>
+
+            </div>
+           </div>
+
+        </section>
 
     </main>
     <!---------------------------------------------- main area end-------------------------------------- -->
