--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
     <!---------------------------------------------- main area start------------------------------------ -->
     <main>
 
+        <!-- about section start -->
+
         <section class="about background-bg">
            <div class="about-bg">
             <h3 class="section-tittle">About Me</h3>
@@ -88,6 +90,45 @@
            </div>
 
         </section>
+        <!-- about section end -->
+
+        <!-- What I do section start -->
+         <section class="skills">
+            <h3 class="section-tittle text-center">What I do</h3>
+            <p class="section-description text-center skills-text">
+                I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.
+            </p>
+
+
+            <div class="skill-items">
+                <div class="skill">
+                    <img src="./images/icons/js.png" alt="">
+                    <h4 class="skill-tittle">Vanilla JavaScript</h4>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+
+                <div class="skill">
+                    <img src="./images/icons/react.png" alt="">
+                    <h4 class="skill-tittle">React</h4>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+
+                <div class="skill">
+                    <img src="./images/icons/nodejs.png" alt="">
+                    <h4 class="skill-tittle">Node.js</h4>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+
+                <div class="skill">
+                    <img src="./images/icons/mongo.png" alt="">
+                    <h4 class="skill-tittle">MongoDB</h4>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+
+            </div>
+
+         </section>
+        <!-- What I do section end -->
 
     </main>
     <!---------------------------------------------- main area end-------------------------------------- -->
