git resume area commit

--- a/index.html
+++ b/index.html
@@ -130,6 +130,73 @@
          </section>
         <!-- What I do section end -->
 
+
+        <!-- Resume section start -->
+         <section class="resume">
+            <h3 class="section-tittle text-center resume-tittle">A summary of My Resume</h3>
+            <div class="resume-container">
+                <div class="resume-column">
+                    <h3 class="resume-coloumn-tittle">My Education</h3>
+
+                    <div class="experience">
+                        <h4 class="experience-tittle">Master in Computer Engineering</h4>
+                        <h5 class="experience-sub-tittle">Harvard University / 2015 - 2017</h5>
+                        <div class="experience-discription">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+                    </div>
+                    <hr>
+                    <div class="experience">
+                        <h4 class="experience-tittle">Master in Computer Engineering</h4>
+                        <h5 class="experience-sub-tittle">Harvard University / 2015 - 2017</h5>
+                        <div class="experience-discription">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+                    </div>
+                    <hr>
+                    <div class="experience">
+                        <h4 class="experience-tittle">Master in Computer Engineering</h4>
+                        <h5 class="experience-sub-tittle">Harvard University / 2015 - 2017</h5>
+                        <div class="experience-discription">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+                    </div>
+
+                </div>
+
+
+                <div class="resume-column">
+                    <h3 class="resume-coloumn-tittle">My Experience</h3>
+
+                    <div class="experience">
+                        <h4 class="experience-tittle">Sr. Font End Developer</h4>
+                        <h5 class="experience-sub-tittle">Apple Inc / 2020 - Current</h5>
+                        <div class="experience-discription">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+                    </div>
+                    <hr>
+                    <div class="experience">
+                        <h4 class="experience-tittle">Jr. Font End Developer</h4>
+                        <h5 class="experience-sub-tittle">Dribbble Inc / 2018 - 2022</h5>
+                        <div class="experience-discription">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+                    </div>
+                    <hr>
+                    <div class="experience">
+                        <h4 class="experience-tittle">HTML Developer</h4>
+                        <h5 class="experience-sub-tittle">Adobe Inc / 2017 - 2018</h5>
+                        <div class="experience-discription">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="text-center resume-btn">
+                <button class="btn-primary">Download CV</button>
+            </div>
+            
+
+         </section>
+        <!-- Resume section end -->
+
     </main>
     <!---------------------------------------------- main area end-------------------------------------- -->
 
