--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
                 <p class="banner-discription">Shot what able cold new see hold.Friendly as an betrayed formerly he.Morning because as to society behaved moments.</p>
                 <button class="btn-primary">Download CV</button>
-                <button class="btn-primary">Contact</button>
+                <button class="contact-btn">Contact</button>
 
             </div>
 
