--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
                 <h1 class="banner-tittle">Mary Hardy</h1>
 
                 <p class="banner-discription">Shot what able cold new see hold.Friendly as an betrayed formerly he.Morning because as to society behaved moments.</p>
-                <button class="btn-primary">Download CV</button>
-                <button class="contact-btn">Contact</button>
+                <button class="btn-primary"> <i class="fa-solid fa-download"></i> Download CV</button>
+                <button class="contact-btn"> <i class="fa-solid fa-phone"></i> Contact</button>
 
             </div>
 
@@ -195,7 +195,7 @@
             </div>
 
             <div class="text-center resume-btn">
-                <button class="btn-primary">Download CV</button>
+                <button class="btn-primary"> <i class="fa-solid fa-download"></i> Download CV</button>
             </div>
             
 
