--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body class="open-sans-normal">
 
     <!------------------------------------------- Header area start------------------------------------ -->
-    <header class="header background-bg">
+    <header class="header background-bg hide">
         <nav>
             <h3 class="nav-tittle">Ma<span class="text-primary">r</span>y</h3>
             <ul>
@@ -68,26 +68,22 @@
             <div class="about-items">
 
                 <div class="about-item">
-                    <p class="item-tittle">Name:
-                    </p>
+                    <p class="item-tittle">Name:</p>
                     <p class="item-description">Mary Hardy </p>
                 </div>
 
                 <div class="about-item">
-                    <p class="item-tittle">Email:
-                    </p>
+                    <p class="item-tittle">Email:</p>
                     <p class="item-description">info@gmail.com</p>
                 </div>
 
                 <div class="about-item">
-                    <p class="item-tittle">Date of birth:
-                    </p>
+                    <p class="item-tittle">Date of birth:</p>
                     <p class="item-description">11 November 1987</p>
                 </div>
 
                 <div class="about-item">
-                    <p class="item-tittle">From:
-                    </p>
+                    <p class="item-tittle">From:</p>
                     <p class="item-description">Los Angeles, USA</p>
                 </div>
 
