--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body class="open-sans-normal">
 
     <!------------------------------------------- Header area start------------------------------------ -->
-    <header class="header background-bg hide">
+    <header class="header background-bg">
         <nav>
             <h3 class="nav-tittle">Ma<span class="text-primary">r</span>y</h3>
             <ul>
